# Mandelbrot

./: .gitignore  README.md
MandelBrot-sfml/: CMakeLists.txt
MandelBrot-sfml/src/: Mandelbrot.hpp  main.cpp
MandelBrot-sfml/src/Color/: ColorMap.cpp  ColorMap.hpp
MandelBrot-sfml/src/Color/ColorAntoine/: ColorAntoine.cpp  ColorAntoine.hpp
MandelBrot-sfml/src/Color/ColorGreen/: ColorGreen.cpp  ColorGreen.hpp
MandelBrot-sfml/src/Color/ColorSmooth/: ColorSmooth.cpp
MandelBrot-sfml/src/Color/ColorSmoothLoop/: ColorSmoothLoop.cpp
MandelBrot-sfml/src/Color/ColorSmoothShifted/: ColorSmoothShifted.cpp
MandelBrot-sfml/src/Color/ColorTest/: ColorTest.hpp
MandelBrot-sfml/src/Convergence/: Convergence.cpp  Convergence.hpp
MandelBrot-sfml/src/Convergence/double/x86/mono/: DP_x86.hpp
MandelBrot-sfml/src/Convergence/quad/x86/mono/: QP_x86.hpp
MandelBrot-sfml/src/Convergence/simple/x86/julia-mono/: JU_SP_x86.cpp
MandelBrot-sfml/src/Convergence/simple/x86/mono/: SP_x86.cpp  SP_x86.hpp
MandelBrot-sfml/src/Utils/: FileHandler.cpp  Utils.hpp
